new block on group page

--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -89,7 +89,7 @@
                 </div>
                 <hr class="block_line"/>
                 <div style="margin-top: -2px; margin-left: -2px; height: 400px; margin-right: 10px;">
-                    <button class="btn btn-primary c-button" style="margin-left: 10px;">
+                    <button class="btn btn-primary c-button" style="margin-left: 10px;" onclick="PopUpShow();">
                         <i class="fa-solid fa-plus" style="fill: var(--second-color);"></i>
                         Создать сообщество
                     </button>
