--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -25,7 +25,7 @@ a {
     height: 100px;
     margin-left: -5px;
     display: block;
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
     white-space: normal;
 }
