--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -121,7 +121,7 @@
                     <hr class="block_line"/>
                 </div>
             </div>
-            <table style="height: 100%; width: 600px; margin-left: 260px;" class="scroll">
+            <table style="height: 100%; width: 600px; margin-left: 260px; overflow-y: hidden;" class="scroll">
                 <tbody>
                 <tr th:each="post : ${posts}">
                     <td>
