--- a/src/main/resources/static/css/groups.css
+++ b/src/main/resources/static/css/groups.css
@@ -25,3 +25,9 @@
     border-radius:5px;
     box-shadow: 0px 0px 10px #000;
 }
+
+.i_style {
+    fill: var(--main-color);
+    width: 30px;
+    height: 30px;
+}
