--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -234,12 +234,6 @@ label {
     outline: none;
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    background-color: #f1f9f9;
-}
-
 #app-cover {
     display: table;
     width: auto;
@@ -260,8 +254,8 @@ body {
 }
 
 .button-cover {
-    height: 50px;
-    margin: 20px;
+    height: 116px;
+    margin: 30px;
     background-color: var(--second-color);
     box-shadow: 0 10px 20px -8px var(--second-color);
     border-radius: 4px;
@@ -292,9 +286,8 @@ body {
 .button {
     position: relative;
     top: 50%;
-    width: 74px;
-    height: 36px;
-    margin: -20px auto 0 auto;
+    width: 116px;
+    height: 56px;
     overflow: hidden;
 }
 
@@ -334,17 +327,20 @@ body {
 #button-2 .knobs:before,
 #button-2 .knobs:after {
     content: "Tt";
+    font-size: 24px;
     position: absolute;
-    top: 4px;
+    top: 50%;
+    transform: translateY(-50%);
     left: 4px;
-    width: 29px;
-    height: 29px;
+    width: 48px;
+    height: 48px;
     color: #fff;
-    font-size: 14px;
+    justify-content: center;
     font-weight: bold;
     text-align: center;
+    vertical-align: middle;
     line-height: 1;
-    padding: 9px 4px;
+    padding: 5px 4px;
     background-color: var(--main-color);
     border-radius: 50%;
     transition: 0.3s ease all;
@@ -359,14 +355,14 @@ body {
 }*/
 
 #button-2 .knobs:after {
-    right: -30px;
+    right: -50px;
     left: auto;
     color: #000;
     background-color: var(--main-color);
 }
 
 #button-2 .checkbox:checked + .knobs:before {
-    left: -28px;
+    left: -50px;
 }
 
 #button-2 .checkbox:checked + .knobs:after {
