--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -264,7 +264,7 @@
     $("#toggle_checkbox").on('change', function () {
         //black
         if ($(this).is(':checked')) {
-            document.documentElement.style.setProperty('--background-color', "#000");
+            document.documentElement.style.setProperty('--background-color', "#28292c");
             setCookie("theme", "black", 10);
         }
         //white
