--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -106,7 +106,7 @@
                             <div class="flexbox">
                                 <div class="search" style="margin: 20px;">
                                     <div>
-                                        <input type="text" placeholder="Поиск..." required>
+                                        <input id="search" type="text" placeholder="Поиск..." required>
                                     </div>
                                 </div>
                             </div>
@@ -216,4 +216,7 @@
 </body>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
+
+</script>
 </html>
